# Images_classifier

./: .env  .pre-commit-config.yaml  README.md  classifier.py  docker-compose.yml  example.env
Backend/: dockerfile  pyproject.toml
Backend/app/: main.py  routes.py  worker.py
Backend/app/core/: config.py  logging.py
Backend/app/infrastructure/: database.py  redis_client.py  s3_client.py
Backend/app/services/: schemas.py  services.py
Backend/app/templates/: failed_upload.html  index.html  success_upload.html
Backend/templates/: result.html
Backend/tests/: conftest.py  locustfile.py  test_routes.py  test_services.py
app/: celery_app.py  database.py  docker-compose.yml  dockerfile  main.py  requirements.txt  routes.py  s3_client.py  tasks.py
app/templates/: failed_upload.html  index.html  success_upload.html  waiting.html
tests/: load_test.py
