[project]
name = "image-classifier"
version = "0.1.0"
description = "Service for image classification using YOLOv8"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "redis",
    "boto3",
    "pydantic-settings",
    "ultralytics",
    "opencv-python-headless",
    "pillow",
    "numpy",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "locust>=2.24.0",
]