[project]
name = "image-classifier"
version = "0.1.0"
description = "Service for image classification using YOLOv8"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",       
    "python-multipart",
    "jinja2",
    "redis",                   
    "aioboto3",                
    "aiosqlite",               
    "pydantic-settings",
    "ultralytics",
    "opencv-python-headless",
    "pillow",
    "numpy",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "locust>=2.24.0",
]