[project]
name = "image-classifier"
version = "0.1.0"
description = "Service for image classification using YOLOv8"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",       
    "python-multipart",
    "jinja2",
    "redis",
    "boto3",                   
    "aioboto3",                
    "aiosqlite",               
    "pydantic-settings",
    "ultralytics",
    "opencv-python-headless",
    "pillow",
    "numpy",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "locust",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "app"   
]
testpaths = [
  "tests"
]
[tool.setuptools]
packages = ["app"]